examples/test/testpolicy18659.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18659
  namespace: namespace450
spec:
  podSelector:
    matchLabels:
      key45: value29
      key30: value4
      key11: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value47
          key14: value48
          key31: value15
